--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <form id="submit-form" action="">
               <label for="fname">First Name</label>
               <input type="text" id="fname" name="name" placeholder="Your name..">
-              <label for="lname">Email</label>
+              <label for="lname">Last name</label>
               <input type="text" id="lname" name="email" placeholder="Your last name..">
               <label for="country">Country</label>
               <select id="country" name="color">
